# simple-web-crawler

./: .coveragerc  README.md  README.rst  problem_statement.rst  requirements.txt  sample_output.txt  setup.cfg  setup.py  test-requirements.txt  test_spider.py  tox.ini
spider/: __init__.py  main.py  parsers.py
spider/tests/unit/: test_parsers.py
spider/tests/unit/html_samples/: sample_template.html
