[metadata]
name = simple-web-crawler
summary = A Simple Web Crawler
description-file =
    README.rst
license = Apache License, Version 2.0
author = Debayan Ray
author-email = debayan.ray@gmail.com
home-page = https://github.com/debayanray/simple-web-crawler
classifier =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    spider
